<resources>
    <string name="app_name">ВГУ Тестирование</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="et_email">Email</string>
    <string name="et_password">Пароль</string>
    <string name="btn_sign_in">Авторизация</string>
    <string name="btn_registration">Создать аккаунт</string>
    <string name="authorization_error">Авторизация неуспешна</string>
    <string name="authorization_complete">Авторизация прошла успешно</string>
    <string name="registration_error_with_email">Регистрация неуспешна. Введите другой E-mail</string>
    <string name="registration_error">Ошибка регистрации</string>
    <string name="registration_error_course_group">Ошибка регистрации. Проверьте введённые курс и группу</string>
    <string name="registration_complete">Регистрация прошла успешно</string>
    <string name="progressMessage">Вход в систему ...</string>
    <string name="your_name">ФИО полностью</string>
    <string name="register_user">Регистрация</string>
    <string name="required">Пустое поле.</string>
    <string name="you_need_to_start_new_account">Вам необходимо создать новый аккаунт</string>
    <string name="checking_login">Проверка авторизации ...</string>
    <string name="test_item">Открытые тесты</string>
    <string name="result_item">Результаты</string>
    <string name="statistics_item">Статистика</string>
    <string name="result_and_statistics_item">Результаты и статистика</string>
    <string name="rating_item">Рейтинги</string>
    <string name="information_item">Информация</string>
    <string name="divider">/</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating_tv">Rating\n0</string>
    <string name="create_your_question_tv">Создайте свой вопрос!</string>
    <string name="hint_question">Введите свой вопрос</string>
    <string name="enter_the_answers_tv">Введите ответы к своему вопросу. Поставьте галочку рядом с правильным ответом</string>
    <string name="et_new_answer1">Ответ 1</string>
    <string name="et_new_answer2">Ответ 2</string>
    <string name="et_new_answer3">Ответ 3</string>
    <string name="et_new_answer4">Ответ 4</string>
    <string name="btn_send">Отправить</string>
    <string name="courseET">Курс</string>
    <string name="groupET">Группа</string>
    <string name="student_tv">Студент</string>
    <string name="teacher_tv">Преподаватель</string>
    <string name="next_step">Далее</string>
    <string name="et_code">Код активации</string>
    <string name="et_department">Кафедра</string>
    <string name="Statistic">Статистика</string>
    <string name="open_test">Перейти к выполнению теста?</string>
    <string name="btn_yes">Да</string>
    <string name="btn_no">Нет</string>
    <string name="previous"><![CDATA[<]]></string>
    <string name="next"><![CDATA[>]]></string>
    <string name="result_TV">Результат</string>
    <string name="right_answer_TV">Правильных ответов:</string>
    <string name="points_TV">Баллы:</string>
    <string name="remark_TV">Чтобы узнать какие ответы неверны нажмите - ПРОСМОТР ТЕСТА.</string>
    <string name="check_test_btn">Просмотр теста</string>
    <string name="main_menu_btn">Главное меню</string>
    <string name="what_information_about_test">Какую информацию о данном тесте вы хотите посмотреть?</string>
    <string name="count_student_TV">Количество студентов, вошедших в данные промежутки баллов</string>
    <string name="nav_header_course_group_or_department">course, group or department</string>
    <string name="cancel_btn">Отмена</string>
    <string name="click_delete_info">Чтобы удалить информацию, кликните по ней</string>
    <string name="delete_this_info">Удалить данную информацию?</string>
    <string name="rating_on_course">Рейтинг курса</string>
    <string name="enter_the_course">Введите курс:</string>
    <string name="search">Поиск</string>
    <string name="rating_on_group">Рейтинг группы</string>
    <string name="enter_course_and_group">Введите курс и группу:</string>
    <string name="student_rating">Рейтинг студента</string>
    <string name="enter_fio_student">Введите ФИО студента:</string>
    <string name="fio_et">Иванов Иван Иванович</string>
    <string name="not_data_about_students">Нет данных по вашему запросу</string>
    <string name="add_course_and_group_text">Добавляйте курсы и группы, которым вы хотите отправить информацию</string>
    <string name="enter_information">Введите информацию</string>
    <string name="error_code_activation">Неправильный код активации</string>
    <string name="error_data_name">ФИО указаны неправильно</string>
    <string name="server_connection_error">Ошибка соединения с сервером..</string>
    <string name="internet_connection_error">Нет соединения с интернетом!</string>
    <string name="main_menu">Главное меню</string>
    <string name="setting_item">Настройки</string>
    <string name="exit_item">Выход</string>
    <string name="close_test">Покинуть тест? (Вы получите 0 баллов за данный тест)</string>
    <string name="text_destroy_app_result_test">Тест был завершён по причине закрытия приложения или выхода из теста. Если это получилось случайно, обратитесь к преподавателю.</string>
    <string name="my_tests_item">Мои тесты</string>
    <string name="change_status_test">Изменить статус теста</string>
    <string name="remark_status_test">(При закрытом статусе, студенты не смогут проходить данный тест)</string>
    <string name="status_open">Открыт</string>
    <string name="status_close">Закрыт</string>
    <string name="delete_test">Удалить</string>
    <string name="delete_test_from_db">Удалить тест из базы данных?</string>
    <string name="open_test_for_student_text">Введите ФИО студента для которого вы повторно хотите открыть тест</string>
    <string name="open_for_student">Открыть для студента</string>
    <string name="this_student_not_exist">Такого студента нет в списках пользователей прошедших тест</string>
    <string name="status_changed">Статус изменён</string>
    <string name="test_deleted">Тест удалён</string>

    <string-array name="chooseList">
        <item>Первые 10 студентов в рейтинге</item>
        <item>Первые 30 студентов в рейтинге</item>
        <item>Первые 100 студентов в рейтинге</item>
        <item>Последние 10 студентов в рейтинге</item>
        <item>Последние 30 студентов в рейтинге</item>
        <item>Последние 100 студентов в рейтинге</item>
        <item>Рейтинг всех студентов на курсе</item>
    </string-array>
</resources>
