<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_result_t"
            android:title="@string/result_and_statistics_item"
            android:icon="@drawable/ic_statistics"/>
        <item
            android:id="@+id/nav_information_t"
            android:title="@string/information_item"
            android:icon="@drawable/ic_information"/>
        <item
            android:id="@+id/nav_rating_t"
            android:title="@string/rating_item"
            android:icon="@drawable/ic_rating"/>
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit_item" />
    </group>
</menu>
