<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAccount.ResultTestActivity"
    android:background="@color/gray"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/paddingLeftRight">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/paddingLeftRight"
            android:background="@drawable/ripple_btn2">

            <TextView
                android:id="@+id/resultTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_TV"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="30sp"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rightAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/resultTest"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/right_answer_TV"
                android:textSize="@dimen/text_size2"/>

            <TextView
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rightAnswer"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:text="@string/points_TV"
                android:textSize="@dimen/text_size2"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/ratingOverall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/remark_TV"
            android:textSize="@dimen/text_size2"/>

        <Button
            android:id="@+id/check_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/ripple_btn"
            android:text="@string/check_test_btn"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:textSize="@dimen/text_size2"/>

        <Button
            android:id="@+id/backMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn"
            android:text="@string/main_menu_btn"
            android:textAllCaps="false"
            android:elevation="10dp"
            android:translationZ="10dp"
            android:textSize="@dimen/text_size2"/>

    </LinearLayout>

</LinearLayout>