<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray2"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/what_information_about_test"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size2" />

    <Button
        android:id="@+id/btn_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:background="@drawable/ripple_btn"
        android:text="@string/result_item"
        android:textSize="@dimen/text_size2" />

    <Button
        android:id="@+id/btn_statistics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/ripple_btn"
        android:text="@string/Statistic"
        android:textSize="@dimen/text_size2" />

</LinearLayout>