<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".StudentAccount.RegistrationStudentActivity">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/your_name"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/courseField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/courseET"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/groupField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/groupET"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/et_email"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/et_password"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/codeField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/ripple_btn2"
            android:hint="@string/et_code"
            android:paddingLeft="@dimen/paddingLeftRight"
            android:paddingRight="@dimen/paddingLeftRight"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:textSize="@dimen/text_size2"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="@dimen/paddingLeftRight"
            android:layout_marginLeft="@dimen/paddingTopBottom"
            android:layout_marginRight="@dimen/paddingTopBottom"
            android:background="@drawable/ripple_btn"
            android:text="@string/register_user"
            android:textSize="@dimen/text_size2"
            android:translationZ="10dp"
            android:elevation="10dp"/>

    </LinearLayout>

</LinearLayout>