<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/paddingLeftRight"
    android:background="@color/gray">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/add_course_and_group_text"
        android:textSize="@dimen/text_size2"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/paddingLeftRight"
        android:paddingRight="@dimen/paddingLeftRight"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ET_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/text_size2"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:hint="@string/courseET"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/ripple_btn_gray"/>

        <EditText
            android:id="@+id/ET_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/text_size2"
            android:textColor="@color/white"
            android:textColorHint="@color/white2"
            android:hint="@string/groupET"
            android:gravity="center"
            android:padding="5dp"
            android:background="@drawable/ripple_btn_gray"/>

        <ImageView
            android:id="@+id/addCourseAndGroup"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:padding="7dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/ripple_btn_gray"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/icon_plus"/>

    </LinearLayout>

    <TextView
        android:id="@+id/courses_and_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size2"
        android:textStyle="bold"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/text_information"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textSize="@dimen/text_size2"
        android:textColor="@color/white"
        android:textColorHint="@color/white2"
        android:gravity="start"
        android:padding="5dp"
        android:background="@drawable/ripple_btn_gray"
        android:hint="@string/enter_information"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn_orange"
            android:text="@string/cancel_btn"
            android:textSize="@dimen/text_size2"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btn_send_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_btn_orange"
            android:text="@string/btn_send"
            android:textSize="@dimen/text_size2"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

</LinearLayout>